# python-scripture-lookup

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/scripturelookup/: command_line.py  data.py  lookup.py  numbers.py
